Adds resource_search_params method
This actually is a bugfix for Ransack insecure params bug in Rails 5 (https://github.com/activerecord-hackery/ransack/issues/687), but this is a good start for adding ransackable attributes support anyway.

--- a/app/views/alchemy/admin/attachments/_attachment.html.erb
+++ b/app/views/alchemy/admin/attachments/_attachment.html.erb
@@ -38,7 +38,7 @@
       Alchemy.t(:confirm_to_delete_file),
       alchemy.admin_attachment_path(
         id: attachment,
-        q: params[:q],
+        q: resource_search_params,
         page: params[:page],
         per_page: params[:per_page]
       ),
@@ -50,7 +50,7 @@
   <% end %>
   <% if can?(:edit, attachment) %>
     <%= link_to_dialog("",
-      alchemy.edit_admin_attachment_path(attachment, q: params[:q], page: params[:page]),
+      alchemy.edit_admin_attachment_path(attachment, q: resource_search_params, page: params[:page]),
       {
         title: Alchemy.t(:rename_file),
         size: '380x250'
