--- a/app/views/alchemy/admin/partials/_remote_search_form.html.erb
+++ b/app/views/alchemy/admin/partials/_remote_search_form.html.erb
@@ -22,6 +22,6 @@
       class: 'search_field_clear',
       id: 'search_field_clear',
       title: Alchemy.t(:click_to_show_all),
-      style: params[:q].blank? ? 'display: none' : 'display: block' %>
+      style: resource_search_params.blank? ? 'display: none' : 'display: block' %>
   </div>
 <% end %>
