--- a/app/views/alchemy/admin/pictures/show.html.erb
+++ b/app/views/alchemy/admin/pictures/show.html.erb
@@ -11,7 +11,7 @@
   <% if @previous %>
     <%= link_to alchemy.admin_picture_path(
         id: @previous,
-        q: params[:q],
+        q: resource_search_params,
         page: params[:page],
         tagged_with: params[:tagged_with],
         size: params[:size],
@@ -25,7 +25,7 @@
   <% if @next %>
     <%= link_to alchemy.admin_picture_path(
         id: @next,
-        q: params[:q],
+        q: resource_search_params,
         page: params[:page],
         tagged_with: params[:tagged_with],
         size: params[:size],
