Use Dragonfly middleware to render images
Instead of providing our own picture rendering controller, we only prepare the params from various options (cropping, resizing, flatten, etc.) and pass them to the dragonfly url helper and let dragonfly deliver the picture.

--- a/app/views/alchemy/admin/pictures/_picture.html.erb
+++ b/app/views/alchemy/admin/pictures/_picture.html.erb
@@ -22,12 +22,7 @@
   </span>
   <% end %>
   <% image = image_tag(
-    alchemy.thumbnail_path(
-      id: picture,
-      size: @size,
-      sh: picture.security_token(size: @size),
-      format: picture.image_file_format
-    ),
+    picture.url(size: preview_size(@size), flatten: true),
     alt: picture.name,
     title: Alchemy.t(:zoom_image)
   ) %>
