Deprecate image_size option key
In order to provide a consistent API for rendering images we deprecate the `image_size` option in favor of just `size`.

--- a/app/views/alchemy/admin/essence_pictures/edit.html.erb
+++ b/app/views/alchemy/admin/essence_pictures/edit.html.erb
@@ -6,7 +6,7 @@
   <%= f.input :alt_tag %>
   <%- if @options[:sizes].present? -%>
     <%= f.input :render_size,
-      collection: [[Alchemy.t('Layout default'), @options[:image_size]]] + @options[:sizes].to_a,
+      collection: [[Alchemy.t('Layout default'), @options[:size]]] + @options[:sizes].to_a,
       include_blank: false,
       input_html: {class: 'alchemy_selectbox'} %>
   <%- end -%>
