--- a/lib/rails/generators/alchemy/elements/templates/view.html.slim
+++ b/lib/rails/generators/alchemy/elements/templates/view.html.slim
@@ -4,7 +4,7 @@
     .<%= @element_name %>_images
       - element.contents.gallery_pictures.each do |image|
         .<%= @element_name %>_image class=image.essence.css_class
-          = render_essence_view(image, image_size: "160x120")
+          = render_essence_view(image, size: "160x120")
   <%- end -%>
   <%- @contents.each do |content| -%>
     <%- if @contents.length > 1 -%>
