--- a/app/views/alchemy/admin/elements/publish.js.erb
+++ b/app/views/alchemy/admin/elements/publish.js.erb
@@ -1,7 +1,7 @@
 var el = $('.element-editor[data-element-id="<%= @element.id %>"]');
 var icon = el.find('> .element-header > .element-handle > .icon');
 var label = el.find('> .element-toolbar .publish-element-button label');
-var eye = el.find('> .element-toolbar .publish-element-button icon')
+var eye = el.find('> .element-toolbar .publish-element-button icon');
 
 <%- if @element.public? -%>
   icon.removeClass('fa-window-close fas');
